Surely thats the last spacing issue. I'm really limited from our lack of pictures =d 	new file:   drawables/JoshuaPerry.jpg 	modified:   index.html 	modified:   products/style.css 	modified:   style.css

--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
 #2a6a96
 #525252
 */
+html,body{
+    margin:0px;
+    height: 100%;
+}
 .frame{
     width: 100%;
     height: 100%;
@@ -47,6 +51,11 @@
     text-align: center;
     width:100%;
     height:100%;
+}
+.banner{
+    width:100%;
+    margin:0px;
+    margin-top: -8px;
 }
 .content,.contentWide{
     background-color: #e2e9f0;
